--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "1.0.0"
 license = "MIT"
 edition = "2021"
 repository = "https://github.com/eabz/eth-snoop"
-description = "ETH event indexer"
+description = "ETH logs and event indexer"
 
 [dependencies]
 alloy = { version = "0.9", features = ["full"] }
